--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node": ">=6.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon",
+    "start": "egg-scripts start --daemon --env=prod --port=9312 --workers=1 --tilte=egg-server-liylblog",
     "stop": "egg-scripts stop",
     "dev": "egg-bin dev",
     "test": "npm run lint -- --fix && npm run test-local",
