--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "dependencies": {
     "egg": "^1.7.0",
-    "egg-scripts": "^1.0.0"
+    "egg-scripts": "^1.0.0",
+    "egg-view-nunjucks": "^2.1.3",
+    "nunjucks": "^3.0.1"
   },
   "devDependencies": {
     "autod": "^2.9.0",
