--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "liyl blog",
   "private": true,
   "dependencies": {
+    "cross-env": "^5.0.5",
     "egg": "^1.7.0",
     "egg-scripts": "^1.0.0",
     "egg-view-nunjucks": "^2.1.3",
-    "nunjucks": "^3.0.1"
+    "karma": "^1.7.1",
+    "nunjucks": "^3.0.1",
+    "vue": "^2.4.4",
+    "vue-server-renderer": "^2.4.4"
   },
   "devDependencies": {
     "autod": "^2.9.0",
@@ -17,6 +21,12 @@
     "egg-mock": "^3.9.0",
     "eslint": "^4.3.0",
     "eslint-config-egg": "^5.0.0",
+    "jasmine-core": "^2.8.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-requirejs": "^1.1.0",
+    "requirejs": "^2.3.5",
+    "rimraf": "^2.6.2",
     "webstorm-disable-index": "^1.2.0"
   },
   "engines": {
@@ -31,7 +41,11 @@
     "cov": "egg-bin cov",
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
-    "autod": "autod"
+    "autod": "autod",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
+    "test-examples": "karma start ./public/examples/karma.conf.js"
   },
   "ci": {
     "version": "6, 8"
