--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "test-examples": "karma start ./public/examples/karma.conf.js"
+    "test:web": "karma start ./test/web/karma.conf.js"
   },
   "ci": {
     "version": "6, 8"
